Cambio de overlay en turismo, arreglos en banner, detalles en navbar y finalizacion de playa

--- a/proyecto_web/plantillas/montanas.html
+++ b/proyecto_web/plantillas/montanas.html
@@ -7,8 +7,8 @@
   <title>Turismo en Lagos - Turismo Salvadoreño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="stylesheet" href="../css/styleLagos.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/StyleMontanas.css">
 </head>
 
 <body>
@@ -68,13 +68,13 @@
                 <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+                <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+                <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
               </li>
     
               <li class="nav-item dropdown">
@@ -192,7 +192,7 @@
           <div class="destination-item position-relative overflow-hidden mb-2">
             <img class="img-fluid" src="../images/CerroPital.jpg" alt="Lago Ilopango">
             <a class="destination-overlay text-white text-decoration-none">
-              <h5 class="text-white">Cerro el pital</h5>
+              <h5 class="text-white">Cerro El Pital</h5>
               <span>Frontera entre El Salvador y Honduras</span>
             </a>
           </div>
