--- a/proyecto_web/plantillas/resenas.html
+++ b/proyecto_web/plantillas/resenas.html
@@ -72,13 +72,13 @@
                 <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+                <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+                <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
               </li>
               <li class="nav-item dropdown">
                 <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
