--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -74,13 +74,13 @@
               <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+              <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+              <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
             </li>
   
             <li class="nav-item dropdown">
@@ -107,7 +107,7 @@
   </header>
     
   <!-- Banner -->
-  <section class="banner d-flex align-items-center">
+  <section class="banner-rural d-flex align-items-center">
     <div class="banner-overlay"></div>
     <div class="container text-white text-center banner-content">
       <p class="fs-4 mb-1">Explora El Salvador</p>
