--- a/proyecto_web/plantillas/playas.html
+++ b/proyecto_web/plantillas/playas.html
@@ -8,18 +8,9 @@
     <!-- Iconos Boxicons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
-    <link href="../css/style.css" rel="stylesheet" />
+
+    <link href="../css/stylePlayas.css" rel="stylesheet" />
 </head>
-  <style>
-    .banner {
-      background-image: url("../images/bannerPlaya.jpg");
-      background-size: cover;
-      background-position: center;
-      height: 60vh;
-      position: relative;
-      width: 100%;
-    }
-  </style>
 <body>
     
     <!-- Header -->
@@ -79,13 +70,13 @@
                 <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+                <a class="nav-link px-3  buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+                <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
               </li>
               <li class="nav-item dropdown">
                 <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
@@ -119,8 +110,119 @@
     </div>
   </section>
 
-  <!-- Main Content -->
-   <br>
+<!-- Contenido Principal -->
+<div class="container-fluid py-5">
+  <div class="container pt-5">
+    <div class="row">
+      <div class="col-lg-6" style="min-height: 700px;">
+        <div class="position-relative h-100">
+          <img class="position-absolute w-100 h-100" src="../images/playa.jpg" alt="Playa El Tunco" style="object-fit: cover;">
+        </div>
+      </div>
+      <div class="col-lg-6 pt-5 pb-lg-5">
+        <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
+          <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">El Salvador</h6>
+          <h1 class="mb-3">Playas que debes visitar al menos una vez</h1>
+          <p>Las playas salvadoreñas son un paraíso tropical ideal para relajarse, practicar surf y disfrutar de puestas de sol inolvidables. Desde arenas volcánicas hasta aguas cristalinas, cada playa ofrece una experiencia única llena de belleza natural.</p>
+          <div class="row mb-4">
+            <div class="col-6">
+              <img class="img-fluid" src="../images/lasflores.jpg" alt="Playa Las Flores">
+            </div>
+            <div class="col-6">
+              <img class="img-fluid" src="../images/espino.jpg" alt="Playa El Espino">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Actividades -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Actividades</h6>
+      <h2>¿Qué puedes hacer en la playa?</h2>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-wind fs-1 text-success'></i>
+        <h5 class="mt-3">Surf</h5>
+        <p>Domina las olas en los mejores puntos de surf de Centroamérica.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-swim fs-1 text-warning'></i>
+        <h5 class="mt-3">Natación</h5>
+        <p>Disfruta del agua cálida del Pacífico en playas seguras y tranquilas.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-sun fs-1 text-primary'></i>
+        <h5 class="mt-3">Tomar el sol</h5>
+        <p>Relájate bajo el sol y disfruta del ambiente tropical.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-party fs-1 text-info'></i>
+        <h5 class="mt-3">Vida nocturna</h5>
+        <p>Vive la fiesta en bares y restaurantes junto al mar.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Destinos -->
+<div class="container-fluid py-5">
+  <div class="container pt-5 pb-3">
+    <div class="text-center mb-3 pb-3">
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destinos</h6>
+      <h1>Playas que debes explorar</h1>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="destination-item position-relative overflow-hidden mb-2">
+          <img class="img-fluid" src="../images/losCobanos.jpg" alt="Playa Los Cóbanos" style="width: 350px; object-fit: cover;">
+          <a class="destination-overlay text-white text-decoration-none">
+            <h5 class="text-white">Playa Los Cóbanos</h5>
+            <span>Sonsonate</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="destination-item position-relative overflow-hidden mb-2">
+          <img class="img-fluid" src="../images/zonte.jpg" alt="Playa El Zonte">
+          <a class="destination-overlay text-white text-decoration-none">
+            <h5 class="text-white">Playa El Zonte</h5>
+            <span>La Libertad</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="destination-item position-relative overflow-hidden mb-2">
+          <img class="img-fluid" src="../images/costaSol.jpg" alt="Playa Costa del Sol">
+          <a class="destination-overlay text-white text-decoration-none">
+            <h5 class="text-white">Costa del Sol</h5>
+            <span>La Paz</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Curiosidades -->
+<section class="bg-light py-5">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Sabías que...</h6>
+      <h2>Curiosidades de nuestras playas</h2>
+    </div>
+    <ul class="list-group list-group-flush bg-white shadow p-4 rounded">
+      <li class="list-group-item">🌊 El Tunco es uno de los destinos favoritos del surf a nivel mundial.</li>
+      <li class="list-group-item">🐢 En algunas playas puedes observar liberación de tortugas marinas.</li>
+      <li class="list-group-item">🌅 Las puestas de sol en El Zonte son consideradas entre las más bellas del país.</li>
+    </ul>
+  </div>
+</section>
   
     <!-- Footer -->
     <footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
