--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -12,6 +12,8 @@
 
     <!-- Estilos CSS -->
     <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
 <body>
