Estilo respon para playa

--- a/proyecto_web/plantillas/playas.html
+++ b/proyecto_web/plantillas/playas.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
     <link href="../css/stylePlayas.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
@@ -50,7 +51,7 @@
                 <a class="nav-link index px-3" href="../index.htm">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <select class="select-menu mx-3 my-1" onchange="location = this.value;">
+                <select class="select-menu nav-link" onchange="location = this.value;">
                   <option value="">TURISMO</option>
                   <option value="../plantillas/urbano.html"></a>Urbano</option>
                   <option value="../plantillas/rural.html">Rural</option>
@@ -101,7 +102,7 @@
     </header>
 
   <!-- Banner -->
-  <section class="banner d-flex align-items-center">
+  <section class="bannerPlayas d-flex align-items-center">
     <div class="banner-overlay"></div>
     <div class="container text-white text-center banner-content">
       <p class="fs-4 mb-1">Explora El Salvador</p>
