--- a/proyecto_web/plantillas/urbano.html
+++ b/proyecto_web/plantillas/urbano.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo Urbano</title>
+    <title>Turismo SV | Urbano</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <!-- Estilos CSS -->
     <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
