Arreglo de uppercase y espaciado en navbar

--- a/proyecto_web/plantillas/montanas.html
+++ b/proyecto_web/plantillas/montanas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turismo en Lagos - Turismo Salvadoreño</title>
+  <title>Turismo SV | Montañas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
@@ -35,70 +35,70 @@
         </div>
       </div>
     </div>
-
+  
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
-        <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    
-          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link index px-3" href="../index.htm">Inicio</a>
-              </li>
-              <li class="nav-item dropdown">
-                <select class="select-menu mx-3 my-1" onchange="location = this.value;">
-                  <option value="">TURISMO</option>
-                  <option value="../plantillas/urbano.html"></a>Urbano</option>
-                  <option value="../plantillas/rural.html">Rural</option>
-                  <option value="../plantillas/playas.html">Playas</option>
-                  <option value="../plantillas/lagos.html">Lagos</option>
-                  <option value="../plantillas/montanas.html">Montañas</option>
-                </select>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
-              </li>
-    
-              <li class="nav-item dropdown">
-                <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
-                    class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
-                  <li>
-                    <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
-                  <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+  
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link px-3" href="../index.htm">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+               <select class="select-menu index nav-link" onchange="location = this.value;">
+                    <option value="" class="turismo">TURISMO</option>
+                <option value="../plantillas/urbano.html"></a>Urbano</option>
+                <option value="../plantillas/rural.html">Rural</option>
+                <option value="../plantillas/playas.html">Playas</option>
+                <option value="../plantillas/lagos.html">Lagos</option>
+                <option value="../plantillas/montanas.html">Montañas</option>
+              </select>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
+            </li>
+  
+            <li class="nav-item dropdown">
+              <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
+                  class="rounded-circle">
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
+                <li>
+                  <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
+                </li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
+                <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
   <!-- Banner -->
   <section class="banner d-flex align-items-center">
