--- a/proyecto_web/plantillas/resenas.html
+++ b/proyecto_web/plantillas/resenas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reseñas</title>
+    <title>Turismo SV | Reseñas</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Iconos Boxicons -->
@@ -53,8 +53,8 @@
                 <a class="nav-link px-3" href="../index.htm">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <select class="select-menu mx-3 my-1" onchange="location = this.value;">
-                  <option value="">TURISMO</option>
+                <select class="select-menu nav-link" onchange="location = this.value;">
+                    <option value="" class="turismo">TURISMO</option>
                   <option value="../plantillas/urbano.html"></a>Urbano</option>
                   <option value="../plantillas/rural.html">Rural</option>
                   <option value="../plantillas/playas.html">Playas</option>
