--- a/proyecto_web/index.htm
+++ b/proyecto_web/index.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Turismo Salvadoreño</title>
+  <title>Turismo SV | Inicio</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Iconos Boxicons -->
@@ -12,34 +12,38 @@
   <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="container-fluid bg-light py-2 border-bottom">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <div class="d-flex align-items-center">
-              <a href="./index.htm">
-                <img src="./logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
-              </a>
-            </div>
-          </div>
-  
-          <div class="col-md-4 text-center">
-            <div class="d-flex align-items-center justify-content-center">
-              <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold">
-                <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
-              </h1>
-            </div>
-          </div>
+<!-- Header -->
+<header>
+  <div class="container-fluid bg-light py-2 border-bottom">
+    <div class="container">
+      <div class="row align-items-center text-center text-md-start">
+        <!-- Logo -->
+        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+          <a href="./index.htm">
+            <img src="./logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+          </a>
+        </div>
+
+        <!-- Título -->
+        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+          <i class="bx bx-globe fs-2 text-primary me-2"></i>
+          <h1 class="m-0 fs-4 fw-bold">
+           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+          </h1>
+        </div>
+
+        <!-- Espacio vacío o futuro botón/menu -->
+        <div class="col-12 col-md-4 d-none d-md-block">
+          <!-- Puedes agregar un botón de contacto o menú aquí -->
         </div>
       </div>
     </div>
-  
+  </div>
+</header>
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
-      <div class="container">
+      <div class="container d-flex justify-content-between align-items-center">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,7 +54,7 @@
               <a class="nav-link index px-3" href="./index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-              <select class="select-menu mx-3 my-1" onchange="location = this.value;">
+              <select class="select-menu nav-link" onchange="location = this.value;">
                 <option value="">TURISMO</option>
                 <option value="./plantillas/urbano.html"></a>Urbano</option>
                 <option value="./plantillas/rural.html">Rural</option>
@@ -81,8 +85,7 @@
             <li class="nav-item dropdown">
               <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                <img id="navbarProfilePic" src="./pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
-                  class="rounded-circle">
+                <img id="navbarProfilePic" src="./pictureDefault/perfilLogoDefecto.jpg" alt="Perfil" class="rounded-circle">
               </a>
               <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
                 <li>
@@ -95,11 +98,12 @@
                 <li><a class="dropdown-item" href="./index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
               </ul>
             </li>
+            
           </ul>
         </div>
       </div>
     </nav>
-  </header>
+
 
   <!-- Banner -->
   <section class="banner d-flex align-items-center">
