--- a/proyecto_web/plantillas/playas.html
+++ b/proyecto_web/plantillas/playas.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo en Playas</title>
+    <title>Turismo SV | Playas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
-
     <link href="../css/stylePlayas.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
@@ -51,8 +51,8 @@
                 <a class="nav-link index px-3" href="../index.htm">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <select class="select-menu mx-3 my-1" onchange="location = this.value;">
-                  <option value="">TURISMO</option>
+                <select class="select-menu nav-link" onchange="location = this.value;">
+               <option value="" class="turismo">TURISMO</option>
                   <option value="../plantillas/urbano.html"></a>Urbano</option>
                   <option value="../plantillas/rural.html">Rural</option>
                   <option value="../plantillas/playas.html">Playas</option>
@@ -102,7 +102,7 @@
     </header>
 
   <!-- Banner -->
-  <section class="banner d-flex align-items-center">
+  <section class="bannerPlayas d-flex align-items-center">
     <div class="banner-overlay"></div>
     <div class="container text-white text-center banner-content">
       <p class="fs-4 mb-1">Explora El Salvador</p>
