--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo Rural</title>
+    <title>Turismo SV | Rural</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
-    
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-
+       <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
     <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
 <body>
@@ -52,11 +51,11 @@
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link index px-3" href="../index.htm">Inicio</a>
+              <a class="nav-link px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-              <select class="select-menu mx-3 my-1" onchange="location = this.value;">
-                <option value="">TURISMO</option>
+              <select class="select-menu index nav-link" onchange="location = this.value;">
+             <option value="" class="turismo">TURISMO</option>
                 <option value="../plantillas/urbano.html"></a>Urbano</option>
                 <option value="../plantillas/rural.html">Rural</option>
                 <option value="../plantillas/playas.html">Playas</option>
