--- a/proyecto_web/plantillas/login.html
+++ b/proyecto_web/plantillas/login.html
@@ -14,28 +14,31 @@
 
 <body>
     
-  <!-- Header -->
-  <header>
-    <div class="container-fluid bg-light py-2 border-bottom">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <div class="d-flex align-items-center">
-              <a href="../index.htm">
-                <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
-              </a>
-            </div>
-          </div>
+<!-- Header -->
+<header>
+  <div class="container-fluid bg-light py-2 border-bottom">
+    <div class="container">
+      <div class="row align-items-center text-center text-md-start">
+        <!-- Logo -->
+        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+          <a href="./index.htm">
+            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+          </a>
+        </div>
 
-          <div class="col-md-4 text-center">
-            <div class="d-flex align-items-center justify-content-center">
-              <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold"><a href="../index.htm" class="text-decoration-none">Turismo SV</a></h1>
-            </div>
-          </div>
+        <!-- Título -->
+        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+          <i class="bx bx-globe fs-2 text-primary me-2"></i>
+          <h1 class="m-0 fs-4 fw-bold">
+           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+          </h1>
+        </div>
+        <div class="col-12 col-md-4 d-none d-md-block">
         </div>
       </div>
     </div>
+  </div>
+</header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
@@ -46,17 +49,17 @@
 
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../index.htm">Inicio</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link index px-3" href="../plantillas/login.html">Iniciar Sesion</a>
             </li>
           </ul>        
         </div>
       </div>
     </nav>
-  </header>
+
 
     <!-- Login -->
     <main class="flex-grow-1 d-flex justify-content-center align-items-center bg-light py-5">
