--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -6,11 +6,8 @@
     <title>Turismo SV | Rural</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
-<<<<<<< HEAD
        <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-=======
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
->>>>>>> 1a61ab5ebca802ed738f5642d3db46c4282a1668
     <!-- Estilos CSS -->
     <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/style.css">
@@ -20,29 +17,30 @@
 <body>
     
   <!-- Header -->
-  <header>
-    <div class="container-fluid bg-light py-2 border-bottom">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <div class="d-flex align-items-center">
-              <a href="../index.htm">
-                <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
-              </a>
-            </div>
-          </div>
-  
-          <div class="col-md-4 text-center">
-            <div class="d-flex align-items-center justify-content-center">
-              <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold">
-                <a href="../index.htm" class="text-decoration-none">Turismo SV</a>
-              </h1>
-            </div>
-          </div>
+<header>
+  <div class="container-fluid bg-light py-2 border-bottom">
+    <div class="container">
+      <div class="row align-items-center text-center text-md-start">
+        <!-- Logo -->
+        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+          <a href="./index.htm">
+            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+          </a>
+        </div>
+
+        <!-- Título -->
+        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+          <i class="bx bx-globe fs-2 text-primary me-2"></i>
+          <h1 class="m-0 fs-4 fw-bold">
+           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+          </h1>
+        </div>
+        <div class="col-12 col-md-4 d-none d-md-block">
         </div>
       </div>
     </div>
+  </div>
+</header>
   
   
     <!-- Navbar -->
@@ -54,7 +52,7 @@
   
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
@@ -67,19 +65,19 @@
                 <option value="../plantillas/montanas.html">Montañas</option>
               </select>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
