--- a/proyecto_web/plantillas/promociones.html
+++ b/proyecto_web/plantillas/promociones.html
@@ -67,7 +67,7 @@
             <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
             </li>
-            <li class="nav-item text-center text-lg-start">ext-center text-lg-start">
+            <li class="nav-item text-center text-lg-start">
               <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
             </li>
             <li class="nav-item text-center text-lg-start">
