Correcion en las rutas de las plantillas html

--- a/proyecto_web/plantillas/playas.html
+++ b/proyecto_web/plantillas/playas.html
@@ -21,7 +21,7 @@
         <!-- Logo -->
         <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
           <a href="./index.htm">
-            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+            <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
           </a>
         </div>
 
