--- a/proyecto_web/plantillas/resenas.html
+++ b/proyecto_web/plantillas/resenas.html
@@ -21,8 +21,8 @@
       <div class="row align-items-center text-center text-md-start">
         <!-- Logo -->
         <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-          <a href="./index.htm">
-            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+          <a href="../index.html">
+            <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
           </a>
         </div>
 
@@ -30,7 +30,7 @@
         <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
           <i class="bx bx-globe fs-2 text-primary me-2"></i>
           <h1 class="m-0 fs-4 fw-bold">
-           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+           <a href="../index.html" class="text-decoration-none">Turismo SV</a>
           </h1>
         </div>
         <div class="col-12 col-md-4 d-none d-md-block">
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item text-center text-lg-start">
-                <a class="nav-link px-3" href="../index.htm">Inicio</a>
+                <a class="nav-link px-3" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item dropdown">
                 <select class="select-menu nav-link" onchange="location = this.value;">
