--- a/proyecto_web/index.html
+++ b/proyecto_web/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Iconos Boxicons -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  
   <!-- Estilos CSS -->
   <link href="css/style.css" rel="stylesheet" />
 </head>
@@ -98,10 +96,9 @@
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="./plantillas/usuario.html">Mi cuenta</a></li>
-              <li><a class="dropdown-item" href="./index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              <li><a class="dropdown-item" href="./index.html" onclick="cerrarSesion()">Cerrar sesión</a></li>
             </ul>
           </li>
-
         </ul>
       </div>
     </div>
@@ -469,5 +466,4 @@ document.addEventListener("DOMContentLoaded", function () {
   <script src="./js/navbarUsuario.js"></script>
 
 </body>
-
 </html>
