--- a/proyecto_web/plantillas/lagos.html
+++ b/proyecto_web/plantillas/lagos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +18,7 @@
         <div class="row align-items-center text-center text-md-start">
           <!-- Logo -->
           <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-            <a href="./index.htm">
+            <a href="../index.html">
               <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
             </a>
           </div>
@@ -28,7 +27,7 @@
           <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
             <i class="bx bx-globe fs-2 text-primary me-2"></i>
             <h1 class="m-0 fs-4 fw-bold">
-              <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+              <a href="../index.html" class="text-decoration-none">Turismo SV</a>
             </h1>
           </div>
           <div class="col-12 col-md-4 d-none d-md-block">
@@ -37,6 +36,7 @@
       </div>
     </div>
   </header>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
     <div class="container">
@@ -47,7 +47,7 @@
       <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item text-center text-lg-start">
-            <a class="nav-link px-3" href="../index.htm">Inicio</a>
+            <a class="nav-link px-3" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <select class="select-menu index nav-link" onchange="location = this.value;">
@@ -92,7 +92,7 @@
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
-              <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              <li><a class="dropdown-item" href="../index.html" onclick="cerrarSesion()">Cerrar sesión</a></li>
             </ul>
           </li>
         </ul>
@@ -115,10 +115,10 @@
       <div class="row">
         <div class="col-lg-6" style="min-height: 700px;">
           <div class="position-relative h-100">
-            <img class="position-absolute w-100 h-100" src="../images/LagoCoate.jpg" alt="Lago de Coatepeque"
-              style="object-fit: cover;">
+            <img class="position-absolute w-100 h-100" src="../images/LagoCoate.jpg" alt="Lago de Coatepeque" style="object-fit: cover;">
           </div>
         </div>
+        
         <div class="col-lg-6 pt-5 pb-lg-5">
           <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
             <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">El Salvador</h6>
@@ -221,10 +221,8 @@
         <h2>Curiosidades de nuestros lagos</h2>
       </div>
       <ul class="list-group list-group-flush bg-white shadow p-4 rounded">
-        <li class="list-group-item">🌋 El Lago de Ilopango se formó tras una gigantesca erupción volcánica hace más de
-          1,500 años.</li>
-        <li class="list-group-item">🌅 El Lago de Coatepeque cambia de color ocasionalmente, tornándose turquesa
-          brillante.</li>
+        <li class="list-group-item">🌋 El Lago de Ilopango se formó tras una gigantesca erupción volcánica hace más de 1,500 años.</li>
+        <li class="list-group-item">🌅 El Lago de Coatepeque cambia de color ocasionalmente, tornándose turquesa brillante.</li>
         <li class="list-group-item">🐟 El Lago Güija es el hábitat de muchas especies endémicas de peces y aves.</li>
       </ul>
     </div>
@@ -235,7 +233,7 @@
     <div class="container">
       <div class="row text-center text-md-start align-items-center">
         <div class="col-md-3 mb-4">
-          <a href="../index.htm">
+          <a href="../index.html">
             <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px" />
           </a>
         </div>
@@ -277,5 +275,4 @@
   <script src="../js/navbarUsuario.js"></script>
   <script src="../js/usuario.js"></script>
 </body>
-
 </html>
