--- a/proyecto_web/plantillas/contacto.html
+++ b/proyecto_web/plantillas/contacto.html
@@ -30,7 +30,7 @@
         <div class="row align-items-center text-center text-md-start">
           <!-- Logo -->
           <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-            <a href="./index.htm">
+            <a href="../index.html">
               <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
             </a>
           </div>
@@ -39,7 +39,7 @@
           <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
             <i class="bx bx-globe fs-2 text-primary me-2"></i>
             <h1 class="m-0 fs-4 fw-bold">
-              <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+              <a href="../index.html" class="text-decoration-none">Turismo SV</a>
             </h1>
           </div>
           <div class="col-12 col-md-4 d-none d-md-block">
