--- a/proyecto_web/plantillas/usuario.html
+++ b/proyecto_web/plantillas/usuario.html
@@ -32,7 +32,7 @@
         <div class="row align-items-center text-center text-md-start">
           <!-- Logo -->
           <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-            <a href="./index.htm">
+            <a href="../index.html">
               <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
             </a>
           </div>
@@ -167,7 +167,7 @@
       <div class="row text-center text-md-start align-items-center">
         <!-- Logo -->
         <div class="col-md-3 mb-4">
-          <a href="../index.htm">
+          <a href="../index.html">
             <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px" />
           </a>
         </div>
