Enlaces en los dos blogs al final

--- a/proyecto_web/index.html
+++ b/proyecto_web/index.html
@@ -215,7 +215,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/centroHistorico.jpeg" class="card-img-top w-100" alt="Centro Historico">
           <div class="position-absolute bottom-0 end-0 m-2">
-          <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+          <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
           <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -234,7 +234,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/suchitoto.jpg" class="card-img-top w-100" alt="Suchitoto">
           <div class="position-absolute bottom-0 end-0 m-2">
-           <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+           <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -253,7 +253,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/lagoCoatepeque.jpg" class="card-img-top w-100" alt="Lago Coatepeque">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -274,7 +274,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/playaTunco.jpg" class="card-img-top w-100" alt="Playa el Tunco">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -293,7 +293,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/cerroVerde.jpeg" class="card-img-top w-100" alt="Cerro Verde">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
            <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -383,7 +383,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 Explora las playas más impresionantes de El Salvador en una
                 experiencia inolvidable de surf y relax.
               </p>
-              <a href="#" class="btn btn-primary rounded-pill px-3">Leer más</a>
+              <a href="https://www.youtube.com/watch?v=ZXjx3OAiKNo" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
             </div>
           </div>
         </div>
@@ -398,7 +398,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 Descubre la magia colonial, el arte y la historia que hacen de
                 Suchitoto un destino imperdible.
               </p>
-              <a href="#" class="btn btn-primary rounded-pill px-3">Leer más</a>
+              <a href="https://youtu.be/zBNLk4UNhKk" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
             </div>
           </div>
         </div>
