solo cambie el link nada mas

--- a/proyecto_web/index.html
+++ b/proyecto_web/index.html
@@ -383,7 +383,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 Explora las playas más impresionantes de El Salvador en una
                 experiencia inolvidable de surf y relax.
               </p>
-              <a href="https://www.youtube.com/watch?v=ZXjx3OAiKNo" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
+              <a href="https://www.youtube.com/watch?v=IJhD77jq7Kk" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
             </div>
           </div>
         </div>
